infra/local/k8s/app/deployment-be.yml
#################################
# Deployment (BE Application Server)
#################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: be-ap
  namespace: lra-local
spec:
  replicas: 2
  selector:
    matchLabels:
      app: be-ap
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  template:
    metadata:
      name: be-ap
      labels:
        app: be-ap
    spec:
      containers:
        - name: be-ap
          image: t3goto/be-ap:0.1
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 150m
              memory: 150Mi
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9011
          readinessProbe:
            tcpSocket:
              port: 9011
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 10
          livenessProbe:
            exec:
              command: ["ls","/usr/local/bin/node"]
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 10
