infra/local/k8s/app/deployment-cache.yml
#################################
# Deployment (Cache Server)
#################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache
  namespace: lra-local
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cache
  template:
    metadata:
      labels:
        app: cache
    spec:
      containers:
      - image: redis:latest
        name: cache
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 6379
